# NetForge_RL

./: .gitignore  404.html  Dockerfile  README.md  changelog.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  python-app.yml
api/environment/: index.html
api/nlp/: index.html
api/siem/: index.html
api/sim2real/: index.html
architecture/nlp_siem/: index.html
architecture/overview/: index.html
architecture/sim2real/: index.html
architecture/zero_trust/: index.html
changelog/: index.html
cybersec/blue_actions/: index.html
cybersec/overview/: index.html
cybersec/red_actions/: index.html
cybersec/threat_model/: index.html
docs/: changelog.md  index.md  quickstart.md
docs/api/: environment.md  nlp.md  siem.md  sim2real.md
docs/architecture/: nlp_siem.md  overview.md  sim2real.md  zero_trust.md
docs/cybersec/: blue_actions.md  overview.md  red_actions.md  threat_model.md
docs/training/: rllib.md  scenarios.md
marl_cyborg/: __init__.py
marl_cyborg/actions/: __init__.py
marl_cyborg/agents/: b_line.py
marl_cyborg/core/: action.py  agent_interface.py  observation.py  state.py
marl_cyborg/environment/: __init__.py  base_env.py  parallel_env.py  pcap_synthesizer.py
marl_cyborg/scenarios/: apt_espionage.py  base_scenario.py  ransomware.py
marl_cyborg/topologies/: network_generator.py
netforge_rl/: __init__.py
netforge_rl/actions/: __init__.py
netforge_rl/agents/: __init__.py  b_line.py  green_agent.py
netforge_rl/core/: action.py  agent_interface.py  commands.py  observation.py  physics.py  registry.py  state.py
netforge_rl/environment/: __init__.py  base_env.py  parallel_env.py  pcap_synthesizer.py
netforge_rl/models/: recurrent_mask_model.py
netforge_rl/nlp/: __init__.py  log_encoder.py
netforge_rl/scenarios/: apt_espionage.py  base_scenario.py  ransomware.py
netforge_rl/siem/: __init__.py  event_templates.py  siem_logger.py
netforge_rl/sim2real/: __init__.py  bridge.py  docker_hypervisor.py  hypervisor_base.py  mock_hypervisor.py  payload_library.json
quickstart/: index.html
search/: search_index.json
tests/: conftest.py
(+53 files in other folders)
