[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netforge_rl"
version = "3.0.0"
description = "Multi-Agent Cybersecurity Simulator based on CybORG"
authors = [
    { name = "marl-Cyborg", email = "igorjankowwski@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.0",
    "gymnasium>=0.29.1",
    "pettingzoo>=1.24.3",
    "networkx>=3.2.1",
    "pyyaml>=6.0.1",
    "stable-baselines3>=2.3.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "tensorboard>=2.17.0",
    "ruff>=0.3.0"
]

[tool.ruff]
line-length = 88

target-version = "py312"

[tool.ruff.format]
quote-style = "single"

indent-style = "space"

skip-magic-trailing-comma = false

docstring-code-format = true
docstring-code-line-length = "dynamic"
